--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -14,11 +14,11 @@ $navbar-padding-horizontal: 300px;
 	opacity: 0.8;
 
 	&:hover {
-
 		opacity: 1;
-
 	}
 }
+
+
 
 
 .mainHeroContainer {
@@ -32,6 +32,45 @@ $navbar-padding-horizontal: 300px;
 
 // @TODO Make better right navbar padding
 .navbar-end {
-	margin-right: 20em;
+	// margin-right: 20em;
 }
 
+
+// Creating 
+.outlineBox {
+
+	// user-select: none; // Use this on all except form input
+	// width: 150px;
+	// height: 180px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 20px;
+	border: 1.5px solid gray;
+	border-radius: 4px;
+
+	&:hover {
+		background-color: rgba(255, 255, 255, 0.1);
+	}
+
+	h1 {
+		padding: 20px;
+	}
+
+}
+
+
+.playerColumn {
+
+	.deleteButton {
+		margin-top: 10px;
+		opacity: 0.2;
+	}
+
+	&:hover {
+		.deleteButton {
+			opacity: 1;
+		}
+	}
+}
