--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -8,7 +8,7 @@ $navbar-padding-horizontal: 300px;
 @import '~bulma/bulma.sass';
 
 
-// Link cards
+// Link cards (deprec)
 .box {
 
 	opacity: 0.8;
@@ -17,9 +17,6 @@ $navbar-padding-horizontal: 300px;
 		opacity: 1;
 	}
 }
-
-
-
 
 .mainHeroContainer {
 	padding-top: 9rem;
@@ -60,17 +57,21 @@ $navbar-padding-horizontal: 300px;
 
 }
 
-
-.playerColumn {
-
-	.deleteButton {
-		margin-top: 10px;
-		opacity: 0.2;
-	}
+.deleteButton {
+	margin-top: 10px;
+	opacity: 0.2;
 
 	&:hover {
-		.deleteButton {
-			opacity: 1;
-		}
+		opacity: 1;
+		
+	}
+}
+
+.playerNameInput {
+	color: white;
+	background-color: #333;
+
+	&::placeholder {
+		color: $grey;
 	}
 }
