--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -14,3 +14,12 @@ body
 
 *
 	color: white
+
+
+.box
+	transition: 0.3s all
+
+.router-link-active
+	.box
+		transform: translateY(-5px)
+		box-shadow: 0px 5px 20px gray
