--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -12,7 +12,6 @@ body
 h1, h2
 	color: white
 
-
 .box
 	transition: 0.3s all
 
@@ -20,3 +19,7 @@ h1, h2
 	.box
 		transform: translateY(-5px)
 		box-shadow: 0px 5px 20px gray
+
+// Container tile for "spells" sidebar tiles
+.shortTileSidebar
+	height: 500px
