Selection, most spell info now visible
Sitll need fixed pos sidebars, change bg color, etc.

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,7 +1,13 @@
 
 
 
-.searchBar 
+// Customized properties
+
+$fullhd: 1800px
+
+// Everything else
+
+.searchBar
 	margin-bottom: 20px
 
 
@@ -23,3 +29,5 @@ h1, h2
 // Container tile for "spells" sidebar tiles
 .shortTileSidebar
 	height: 500px
+
+
