--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -26,8 +26,15 @@ h1, h2
 		transform: translateY(-5px)
 		box-shadow: 0px 5px 20px gray
 
+
+// --- Spells ---
+
 // Container tile for "spells" sidebar tiles
 .shortTileSidebar
 	height: 500px
+	position: sticky
+	top: 0
 
-
+.spellNameSidebar
+	max-height: 90%
+	overflow: scroll
