Spell search UI

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -38,3 +38,8 @@ h1, h2
 .spellNameSidebar
 	max-height: 90%
 	overflow: scroll
+
+// Tweaks to checkboxes
+.checkBoxControl
+	margin-top: 5px
+	user-select: none
